--- a/.github/workflows/angular-build.yaml
+++ b/.github/workflows/angular-build.yaml
@@ -10,14 +10,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.x]
+
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: ${{ matrix.node-version }}
 
       - name: Install Dependencies
         run: npm install
