Made action not working

--- a/.github/workflows/angular-build.yaml
+++ b/.github/workflows/angular-build.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - features/**
+      # - features/**
 
 jobs:
   build:
@@ -24,7 +24,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install Dependencies
+        # run: npm install
         run: cd src/test-frontend/ && npm install
 
       - name: Build Angular App
-        run: cd src/test-frontend/ && npm run build
+        run: npm run build
+        # run: cd src/test-frontend/ && npm run build
